set(APPL_EXEC_DIR ${CMAKE_CURRENT_SOURCE_DIR})

file(GLOB_RECURSE SOURCE_MAIN
	Main.cpp
	${CODE_DIR}/NatvisFile.natvis

)

add_executable(ApplicationExecutable ${SOURCE_MAIN})

set_target_properties(ApplicationExecutable PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY "${BUILD_DIRECTORY}"
	LIBRARY_OUTPUT_DIRECTORY "${BUILD_DIRECTORY}"
	ARCHIVE_OUTPUT_DIRECTORY "${BUILD_DIRECTORY}"
)

foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
	string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIGUPPER )
	set_target_properties(ApplicationExecutable PROPERTIES
		RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIGUPPER} "${BUILD_DIRECTORY}/${OUTPUTCONFIG}"
		LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIGUPPER} "${BUILD_DIRECTORY}/${OUTPUTCONFIG}"
		ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIGUPPER} "${BUILD_DIRECTORY}/${OUTPUTCONFIG}"
	)
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

set_property(TARGET ApplicationExecutable PROPERTY COMPILE_WARNING_AS_ERROR ON)
set(APPLICATION_NAME "Application" CACHE STRING "Name of the output Executable")
set_target_properties(ApplicationExecutable PROPERTIES OUTPUT_NAME "Application")

set_property(TARGET ApplicationExecutable PROPERTY VS_DEBUGGER_WORKING_DIRECTORY ${BUILD_DIRECTORY})

target_include_directories(ApplicationExecutable
    PUBLIC ../
)
find_package(fmt CONFIG REQUIRED)

target_link_libraries(ApplicationExecutable Common ${CMAKE_DL_LIBS} ${CORE_LIBS})
